--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "concurrently": "^8.2.2",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.0",
     "ts-node-dev": "^2.0.0"
   },
