--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ts-node-dev": "^2.0.0"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.2.0"
